force-app/main/default/objects/Supplier__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <inlineHelpText>Enter the email address of the supplier’s primary contact.</inlineHelpText>
    <label>Contact Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>