force-app/main/default/objects/Supplier__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>Stores the contact phone number of the supplier.</description>
    <label>Contact Phone</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>