force-app/main/default/objects/Supplier__c/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <inlineHelpText>Enter the end date of the supplier’s contract.</inlineHelpText>
    <label>Contract End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>