force-app/main/default/objects/Supplier__c/fields/Performance_Rating__c.field-meta.xml
<CustomField>
    <fullName>Performance_Rating__c</fullName>
    <inlineHelpText>Select the performance rating for the supplier based on their historical performance.</inlineHelpText>
    <label>Performance Rating</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Excellent</fullName>
                <default>true</default>
                <label>Excellent</label>
            </value>
            <value>
                <fullName>Fair</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>