force-app/main/default/objects/Supplier__c/fields/Supplier_Code__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Code__c</fullName>
    <displayFormat>SUP-{0000}</displayFormat>
    <inlineHelpText>Automatically generated unique code for each supplier.</inlineHelpText>
    <label>Supplier Code</label>
    <type>AutoNumber</type>
</CustomField>